--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "clean-all": "npx react-native clean-project-auto"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.14.1",
+    "@react-native-async-storage/async-storage": "^1.15.7",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "~6.0.1",
-    "@react-navigation/stack": "~6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
+    "@react-navigation/stack": "~6.0.1",
+    "@types/react-native-snap-carousel": "^3.8.4",
     "@unimodules/core": "6.0.0",
     "apisauce": "2.0.0",
     "expo-linear-gradient": "^9.2.0",
@@ -43,8 +44,11 @@
     "react-native": "0.64.2",
     "react-native-gesture-handler": "1.10.3",
     "react-native-keychain": "6.2.0",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "3.1.8",
     "react-native-screens": "2.18.1",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^12.1.1",
     "react-native-unimodules": "0.12.0",
     "reactotron-mst": "3.1.3",
     "reactotron-react-js": "^3.3.7",
